# customer-support-agent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  spec.md
app/: config.py  db.py  main.py  seed.py
app/agent/: agent.py  logging_callback.py  prompts.py  tools.py
app/api/: analytics.py  chat.py  deps.py  feedback.py  knowledge_base.py  orders.py  tickets.py
app/models/: __init__.py  chat.py  customer.py  feedback.py  order.py  refund.py  throttle.py  ticket.py
app/rag/: ingest.py  retriever.py
data/policies/: payment_faq.md  returns.md  shipping.md
frontend/: admin.html  index.html
tests/: test_admin_auth.py
