[project]
name = "customer-support-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.10",
    "langchain-chroma>=1.1.0",
    "langchain-groq>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
